fix(button): ensure vertical alignment of icons
OUI-1718

--- a/projects/oblique/src/styles/scss/core/components/_external-link.scss
+++ b/projects/oblique/src/styles/scss/core/components/_external-link.scss
@@ -5,7 +5,7 @@
 	align-items: baseline;
 	gap: variables.$ob-spacing-xs;
 
-	.mat-icon {
+	span.mat-icon {
 		align-self: center;
 	}
 }
