--- a/projects/oblique/src/styles/scss/themes/material/_mat-button.scss
+++ b/projects/oblique/src/styles/scss/themes/material/_mat-button.scss
@@ -11,6 +11,10 @@
 			display: none;
 		}
 
+		&.ob-external-link {
+			display: inline-flex;
+		}
+
 		&.mat-primary:not(.ob-button-card) {
 			&:hover {
 				color: core-variables.$ob-dark;
@@ -74,7 +78,7 @@
 		border-radius: core-variables.$ob-border-radius-button;
 	}
 
-	:not(.mat-icon-button) .mat-icon {
+	&:not(.ob-external-link):not(.mat-icon-button) .mat-icon {
 		&.fa,
 		&.fas,
 		&.far,
